// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarItem collapsible menu is expanded when one of the children is selected 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="h-full shadow-[inset_-1px_0_0_0] text-lg/[inherit] relative transition-[width] ease-in delay-[225ms] min-[1280px]:block [&]:before:absolute [&]:before:content-[""] [&]:before:left-0 [&]:before:top-0 [&]:before:w-[15.5rem] [&]:before:h-full shadow-gray bg-gray w-[236px] xs:max-md:overflow-y block"
    >
      <div
        class="h-full max-h-[calc(100vh-var(--header sticky top-[var(--header"
      >
        <div
          class="flex flex-col scrollable-content h-full overflow-y pt-4 pb-2 px-0"
        >
          <div
            class="order-[50] flex-1 h-full"
          />
          <ul
            class="relative list-none outline-hidden py-2 px-0 m-0 rounded-sm shadow-0 order-1 [&_&]:flex-1 grow-0 shrink-1 max-w"
            role="menu"
            tabindex="-1"
          >
            <div
              class="relative bg-transparent text-[1rem] text-graphite [&_[data-component-type="accordion-summary"]]:p [&_[data-component-type="accordion-summary"]]:pl [&_[data-component-type="accordion-summary"]]:mx [&_[data-component-type="accordion-summary-content"]]:max-w"
              data-component-type="accordion"
              data-orientation="vertical"
              dir="ltr"
              role="region"
            >
              <div
                data-index="0"
                data-open=""
                data-orientation="vertical"
              >
                <div
                  data-index="0"
                  data-open=""
                  data-orientation="vertical"
                >
                  <div
                    aria-controls="base-ui-:r4:"
                    aria-expanded="true"
                    class="relative flex items-center select-none cursor-pointer outline-none py-[0.5625em] px-0 font-semibold text-black data-[disabled]:pointer-events"
                    data-component-type="accordion-summary"
                    data-orientation="vertical"
                    data-panel-open=""
                    data-value="item"
                    id="base-ui-:r5:"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="flex grow flex-row items-center justify-between m-0 text-[0.875em] leading-[1.5em]"
                      data-component-type="accordion-summary-content"
                    >
                      <li
                        aria-disabled="false"
                        class="bg-transparent px-4 py-[0.375rem] w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden text-left no-underline flex items-center justify-start outline-hidden appearance-none leading-4 h-[2.75rem] whitespace-nowrap rounded-sm flex-1 min-w text-graphite hover:text-blue focus:text-blue pl-0 pr-0 pt-0 pb-0 mt-0 mb-0 mr-0 ml-0"
                        role="menuitem"
                        tabindex="0"
                      >
                        <div
                          class="flex flex-1 max-w"
                        >
                          <div
                            class="flex flex-col flex-1 min-w"
                          >
                            <div
                              class="flex items-center"
                            >
                              <span
                                class="gap-2 items-center inline-flex flex-1 min-w"
                              >
                                <div
                                  class="items-center flex flex-1 min-w"
                                >
                                  <p
                                    class="m-0 text-md text-inherit font-regular whitespace-nowrap text-ellipsis overflow-hidden"
                                  >
                                    Test item
                                  </p>
                                </div>
                              </span>
                            </div>
                          </div>
                        </div>
                      </li>
                      <button
                        aria-disabled="false"
                        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer border-none px-0 bg-transparent h-[1.5em] hover:text-blue hover:underline active:text-blue active:underline focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-visible:rounded-sm"
                        data-component-type="button"
                        role="button"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="items-center inline-flex font-semibold text-blue text-md"
                        >
                          <svg
                            class="fill-current inline-block align-[-.125em] flex-1 w-4 h-4 text-[0.7em] text-graphite transition-transform duration-150 ease-in rotate-180"
                            style="min-width: 16px; min-height: 16px;"
                            viewBox="0 0 16 16"
                          >
                            <path
                              d="m11.997 5.29.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4Z"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  aria-labelledby="base-ui-:r5:"
                  class="overflow-hidden h-[var(--accordion-panel transition-[height] duration-200 ease-in data-starting-style:h data-ending-style:h [&[hidden]]:block [&[hidden]]:h-0 [&[hidden]]:invisible"
                  data-index="0"
                  data-open=""
                  data-orientation="vertical"
                  data-starting-style=""
                  id="base-ui-:r4:"
                  role="region"
                  style="--accordion-panel-height: auto; --accordion-panel-width: auto;"
                >
                  <div
                    class="flex p-0"
                  >
                    <ul
                      class="relative list-none outline-hidden py-2 px-0 m-0 rounded-sm shadow-0 order-1 [&_&]:flex-1 grow-0 shrink-1 max-w"
                      role="menu"
                      tabindex="-1"
                    >
                      <li
                        aria-disabled="false"
                        class="px-4 py-[0.375rem] w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden text-left no-underline flex items-center justify-start outline-hidden appearance-none leading-4 h-[2.75rem] whitespace-nowrap rounded-sm flex-1 min-w text-blue hover:text-blue focus:text-blue bg-gray hover:bg-gray focus:bg-gray pl-8 pr-4 pt-0 pb-0 mt-0 mb-0 mr-4 ml-4"
                        role="menuitem"
                        tabindex="0"
                      >
                        <div
                          class="flex flex-1 max-w"
                        >
                          <div
                            class="flex flex-col flex-1 min-w"
                          >
                            <div
                              class="flex items-center"
                            >
                              <span
                                class="gap-2 items-center inline-flex flex-1 min-w"
                              >
                                <div
                                  class="items-center flex flex-1 min-w"
                                >
                                  <p
                                    class="m-0 text-md text-inherit font-regular whitespace-nowrap text-ellipsis overflow-hidden"
                                  >
                                    Menu item
                                  </p>
                                </div>
                              </span>
                            </div>
                          </div>
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SidebarItem collapsible menu is expanded when one of the children is selected and subMenu has a wrapper component 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="h-full shadow-[inset_-1px_0_0_0] text-lg/[inherit] relative transition-[width] ease-in delay-[225ms] min-[1280px]:block [&]:before:absolute [&]:before:content-[""] [&]:before:left-0 [&]:before:top-0 [&]:before:w-[15.5rem] [&]:before:h-full shadow-gray bg-gray w-[236px] xs:max-md:overflow-y block"
    >
      <div
        class="h-full max-h-[calc(100vh-var(--header sticky top-[var(--header"
      >
        <div
          class="flex flex-col scrollable-content h-full overflow-y pt-4 pb-2 px-0"
        >
          <div
            class="order-[50] flex-1 h-full"
          />
          <ul
            class="relative list-none outline-hidden py-2 px-0 m-0 rounded-sm shadow-0 order-1 [&_&]:flex-1 grow-0 shrink-1 max-w"
            role="menu"
            tabindex="-1"
          >
            <div
              class="relative bg-transparent text-[1rem] text-graphite [&_[data-component-type="accordion-summary"]]:p [&_[data-component-type="accordion-summary"]]:pl [&_[data-component-type="accordion-summary"]]:mx [&_[data-component-type="accordion-summary-content"]]:max-w"
              data-component-type="accordion"
              data-orientation="vertical"
              dir="ltr"
              role="region"
            >
              <div
                data-index="0"
                data-open=""
                data-orientation="vertical"
              >
                <div
                  data-index="0"
                  data-open=""
                  data-orientation="vertical"
                >
                  <div
                    aria-controls="base-ui-:r7:"
                    aria-expanded="true"
                    class="relative flex items-center select-none cursor-pointer outline-none py-[0.5625em] px-0 font-semibold text-black data-[disabled]:pointer-events"
                    data-component-type="accordion-summary"
                    data-orientation="vertical"
                    data-panel-open=""
                    data-value="item"
                    id="base-ui-:r8:"
                    role="button"
                    tabindex="0"
                  >
                    <div
                      class="flex grow flex-row items-center justify-between m-0 text-[0.875em] leading-[1.5em]"
                      data-component-type="accordion-summary-content"
                    >
                      <li
                        aria-disabled="false"
                        class="bg-transparent px-4 py-[0.375rem] w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden text-left no-underline flex items-center justify-start outline-hidden appearance-none leading-4 h-[2.75rem] whitespace-nowrap rounded-sm flex-1 min-w text-graphite hover:text-blue focus:text-blue pl-0 pr-0 pt-0 pb-0 mt-0 mb-0 mr-0 ml-0"
                        role="menuitem"
                        tabindex="0"
                      >
                        <div
                          class="flex flex-1 max-w"
                        >
                          <div
                            class="flex flex-col flex-1 min-w"
                          >
                            <div
                              class="flex items-center"
                            >
                              <span
                                class="gap-2 items-center inline-flex flex-1 min-w"
                              >
                                <div
                                  class="items-center flex flex-1 min-w"
                                >
                                  <p
                                    class="m-0 text-md text-inherit font-regular whitespace-nowrap text-ellipsis overflow-hidden"
                                  >
                                    Test item
                                  </p>
                                </div>
                              </span>
                            </div>
                          </div>
                        </div>
                      </li>
                      <button
                        aria-disabled="false"
                        class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer border-none px-0 bg-transparent h-[1.5em] hover:text-blue hover:underline active:text-blue active:underline focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-visible:rounded-sm"
                        data-component-type="button"
                        role="button"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="items-center inline-flex font-semibold text-blue text-md"
                        >
                          <svg
                            class="fill-current inline-block align-[-.125em] flex-1 w-4 h-4 text-[0.7em] text-graphite transition-transform duration-150 ease-in rotate-180"
                            style="min-width: 16px; min-height: 16px;"
                            viewBox="0 0 16 16"
                          >
                            <path
                              d="m11.997 5.29.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4Z"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  aria-labelledby="base-ui-:r8:"
                  class="overflow-hidden h-[var(--accordion-panel transition-[height] duration-200 ease-in data-starting-style:h data-ending-style:h [&[hidden]]:block [&[hidden]]:h-0 [&[hidden]]:invisible"
                  data-index="0"
                  data-open=""
                  data-orientation="vertical"
                  data-starting-style=""
                  id="base-ui-:r7:"
                  role="region"
                  style="--accordion-panel-height: auto; --accordion-panel-width: auto;"
                >
                  <div
                    class="flex p-0"
                  >
                    <ul
                      class="relative list-none outline-hidden py-2 px-0 m-0 rounded-sm shadow-0 order-1 [&_&]:flex-1 grow-0 shrink-1 max-w"
                      role="menu"
                      tabindex="-1"
                    >
                      <li
                        aria-disabled="false"
                        class="px-4 py-[0.375rem] w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden text-left no-underline flex items-center justify-start outline-hidden appearance-none leading-4 h-[2.75rem] whitespace-nowrap rounded-sm flex-1 min-w text-blue hover:text-blue focus:text-blue bg-gray hover:bg-gray focus:bg-gray pl-8 pr-4 pt-0 pb-0 mt-0 mb-0 mr-4 ml-4"
                        role="menuitem"
                        tabindex="0"
                      >
                        <div
                          class="flex flex-1 max-w"
                        >
                          <div
                            class="flex flex-col flex-1 min-w"
                          >
                            <div
                              class="flex items-center"
                            >
                              <span
                                class="gap-2 items-center inline-flex flex-1 min-w"
                              >
                                <div
                                  class="items-center flex flex-1 min-w"
                                >
                                  <p
                                    class="m-0 text-md text-inherit font-regular whitespace-nowrap text-ellipsis overflow-hidden"
                                  >
                                    Menu item
                                  </p>
                                </div>
                              </span>
                            </div>
                          </div>
                        </div>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SidebarItem don't use accordion for non-collapsible with menu 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="bg-transparent px-4 py-[0.375rem] w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden text-left no-underline flex items-center justify-start outline-hidden appearance-none leading-4 h-[2.75rem] whitespace-nowrap rounded-sm flex-1 min-w text-graphite hover:text-blue focus:text-blue pl-4 pr-4 pt-0 pb-0 mt-0 mb-0 mr-4 ml-4"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="flex flex-1 max-w"
      >
        <div
          class="flex flex-col flex-1 min-w"
        >
          <div
            class="flex items-center"
          >
            <span
              class="gap-2 items-center inline-flex flex-1 min-w"
            >
              <svg
                class="fill-current inline-block text-inherit h-[1em] align-[-.125em]"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="M16 11H7v4l-7-4V1h16v10Zm-1-9H1v8.42l5 2.857V10h9V2Z"
                />
              </svg>
              <div
                class="items-center flex flex-1 min-w ml-[.375rem]"
              >
                <p
                  class="m-0 text-md text-inherit font-regular whitespace-nowrap text-ellipsis overflow-hidden"
                >
                  Test item
                </p>
              </div>
            </span>
          </div>
        </div>
      </div>
    </li>
    <div>
      <ul
        class="relative list-none outline-hidden py-2 px-0 m-0 rounded-sm shadow-0 order-1 [&_&]:flex-1 grow-0 shrink-1 max-w"
        role="menu"
        tabindex="-1"
      >
        <li
          aria-disabled="false"
          class="bg-transparent px-4 py-[0.375rem] w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden text-left no-underline flex items-center justify-start outline-hidden appearance-none leading-4 h-[2.75rem] whitespace-nowrap rounded-sm flex-1 min-w text-graphite hover:text-blue focus:text-blue pl-[2.875rem] pr-4 pt-0 pb-0 mt-0 mb-0 mr-4 ml-4"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="flex flex-1 max-w"
          >
            <div
              class="flex flex-col flex-1 min-w"
            >
              <div
                class="flex items-center"
              >
                <span
                  class="gap-2 items-center inline-flex flex-1 min-w"
                >
                  <div
                    class="items-center flex flex-1 min-w"
                  >
                    <p
                      class="m-0 text-md text-inherit font-regular whitespace-nowrap text-ellipsis overflow-hidden"
                    >
                      Menu item
                    </p>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`SidebarItem is selected 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="px-4 py-[0.375rem] w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden text-left no-underline flex items-center justify-start outline-hidden appearance-none leading-4 h-[2.75rem] whitespace-nowrap rounded-sm flex-1 min-w text-blue hover:text-blue focus:text-blue bg-gray hover:bg-gray focus:bg-gray pl-4 pr-4 pt-0 pb-0 mt-0 mb-0 mr-4 ml-4"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="flex flex-1 max-w"
      >
        <div
          class="flex flex-col flex-1 min-w"
        >
          <div
            class="flex items-center"
          >
            <span
              class="gap-2 items-center inline-flex flex-1 min-w"
            >
              <svg
                class="fill-current inline-block text-inherit h-[1em] align-[-.125em]"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="M16 11H7v4l-7-4V1h16v10Zm-1-9H1v8.42l5 2.857V10h9V2Z"
                />
              </svg>
              <div
                class="items-center flex flex-1 min-w ml-[.375rem]"
              >
                <p
                  class="m-0 text-md text-inherit font-regular whitespace-nowrap text-ellipsis overflow-hidden"
                >
                  Test item
                </p>
              </div>
            </span>
          </div>
        </div>
      </div>
    </li>
  </div>
</div>
`;

exports[`SidebarItem renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="bg-transparent px-4 py-[0.375rem] w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden text-left no-underline flex items-center justify-start outline-hidden appearance-none leading-4 h-[2.75rem] whitespace-nowrap rounded-sm flex-1 min-w text-graphite hover:text-blue focus:text-blue pl-4 pr-4 pt-0 pb-0 mt-0 mb-0 mr-4 ml-4"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="flex flex-1 max-w"
      >
        <div
          class="flex flex-col flex-1 min-w"
        >
          <div
            class="flex items-center"
          >
            <span
              class="gap-2 items-center inline-flex flex-1 min-w"
            >
              <div
                class="items-center flex flex-1 min-w"
              >
                <p
                  class="m-0 text-md text-inherit font-regular whitespace-nowrap text-ellipsis overflow-hidden"
                >
                  Test item
                </p>
              </div>
            </span>
          </div>
        </div>
      </div>
    </li>
  </div>
</div>
`;

exports[`SidebarItem use accordion for collapsible with menu 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="relative bg-transparent text-[1rem] text-graphite [&_[data-component-type="accordion-summary"]]:p [&_[data-component-type="accordion-summary"]]:pl [&_[data-component-type="accordion-summary"]]:mx [&_[data-component-type="accordion-summary-content"]]:max-w"
      data-component-type="accordion"
      data-orientation="vertical"
      dir="ltr"
      role="region"
    >
      <div
        data-closed=""
        data-index="0"
        data-orientation="vertical"
      >
        <div
          data-closed=""
          data-index="0"
          data-orientation="vertical"
        >
          <div
            aria-expanded="false"
            class="relative flex items-center select-none cursor-pointer outline-none py-[0.5625em] px-0 font-semibold text-black data-[disabled]:pointer-events"
            data-component-type="accordion-summary"
            data-orientation="vertical"
            data-value=""
            id="base-ui-:r2:"
            role="button"
            tabindex="0"
          >
            <div
              class="flex grow flex-row items-center justify-between m-0 text-[0.875em] leading-[1.5em]"
              data-component-type="accordion-summary-content"
            >
              <li
                aria-disabled="false"
                class="bg-transparent px-4 py-[0.375rem] w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden text-left no-underline flex items-center justify-start outline-hidden appearance-none leading-4 h-[2.75rem] whitespace-nowrap rounded-sm flex-1 min-w text-graphite hover:text-blue focus:text-blue pl-0 pr-0 pt-0 pb-0 mt-0 mb-0 mr-0 ml-0"
                role="menuitem"
                tabindex="-1"
              >
                <div
                  class="flex flex-1 max-w"
                >
                  <div
                    class="flex flex-col flex-1 min-w"
                  >
                    <div
                      class="flex items-center"
                    >
                      <span
                        class="gap-2 items-center inline-flex flex-1 min-w"
                      >
                        <svg
                          class="fill-current inline-block text-inherit h-[1em] align-[-.125em]"
                          style="min-width: 16px; min-height: 16px;"
                          viewBox="0 0 16 16"
                        >
                          <path
                            d="M16 11H7v4l-7-4V1h16v10Zm-1-9H1v8.42l5 2.857V10h9V2Z"
                          />
                        </svg>
                        <div
                          class="items-center flex flex-1 min-w ml-[.375rem]"
                        >
                          <p
                            class="m-0 text-md text-inherit font-regular whitespace-nowrap text-ellipsis overflow-hidden"
                          >
                            Test item
                          </p>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </li>
              <button
                aria-disabled="false"
                class="base-Button text-lg inline-flex items-center justify-center select-none appearance-none m-0 relative normal-case align-middle transition-colors duration-350 ease-out shrink-0 outline-hidden [[data-component-type="button"]+&]:ml cursor-pointer border-none px-0 bg-transparent h-[1.5em] hover:text-blue hover:underline active:text-blue active:underline focus-visible:shadow-[0_0_0_3px_rgba(32,78,207,0.48)] focus-visible:rounded-sm"
                data-component-type="button"
                role="button"
                tabindex="0"
                type="button"
              >
                <span
                  class="items-center inline-flex font-semibold text-blue text-md"
                >
                  <svg
                    class="fill-current inline-block align-[-.125em] flex-1 w-4 h-4 text-[0.7em] text-graphite transition-transform duration-150 ease-in"
                    style="min-width: 16px; min-height: 16px;"
                    viewBox="0 0 16 16"
                  >
                    <path
                      d="m11.997 5.29.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4Z"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="base-ui-:r2:"
          class="overflow-hidden h-[var(--accordion-panel transition-[height] duration-200 ease-in data-starting-style:h data-ending-style:h [&[hidden]]:block [&[hidden]]:h-0 [&[hidden]]:invisible"
          data-closed=""
          data-index="0"
          data-orientation="vertical"
          hidden=""
          id="base-ui-:r1:"
          role="region"
          style="--accordion-panel-height: auto; --accordion-panel-width: auto;"
        >
          <div
            class="flex p-0"
          >
            <ul
              class="relative list-none outline-hidden py-2 px-0 m-0 rounded-sm shadow-0 order-1 [&_&]:flex-1 grow-0 shrink-1 max-w"
              role="menu"
              tabindex="-1"
            >
              <li
                aria-disabled="false"
                class="bg-transparent px-4 py-[0.375rem] w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden text-left no-underline flex items-center justify-start outline-hidden appearance-none leading-4 h-[2.75rem] whitespace-nowrap rounded-sm flex-1 min-w text-graphite hover:text-blue focus:text-blue pl-[2.875rem] pr-4 pt-0 pb-0 mt-0 mb-0 mr-4 ml-4"
                role="menuitem"
                tabindex="0"
              >
                <div
                  class="flex flex-1 max-w"
                >
                  <div
                    class="flex flex-col flex-1 min-w"
                  >
                    <div
                      class="flex items-center"
                    >
                      <span
                        class="gap-2 items-center inline-flex flex-1 min-w"
                      >
                        <div
                          class="items-center flex flex-1 min-w"
                        >
                          <p
                            class="m-0 text-md text-inherit font-regular whitespace-nowrap text-ellipsis overflow-hidden"
                          >
                            Menu item
                          </p>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SidebarItem with icon 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="bg-transparent px-4 py-[0.375rem] w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden text-left no-underline flex items-center justify-start outline-hidden appearance-none leading-4 h-[2.75rem] whitespace-nowrap rounded-sm flex-1 min-w text-graphite hover:text-blue focus:text-blue pl-4 pr-4 pt-0 pb-0 mt-0 mb-0 mr-4 ml-4"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="flex flex-1 max-w"
      >
        <div
          class="flex flex-col flex-1 min-w"
        >
          <div
            class="flex items-center"
          >
            <span
              class="gap-2 items-center inline-flex flex-1 min-w"
            >
              <svg
                class="fill-current inline-block text-inherit h-[1em] align-[-.125em]"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="M16 11H7v4l-7-4V1h16v10Zm-1-9H1v8.42l5 2.857V10h9V2Z"
                />
              </svg>
              <div
                class="items-center flex flex-1 min-w ml-[.375rem]"
              >
                <p
                  class="m-0 text-md text-inherit font-regular whitespace-nowrap text-ellipsis overflow-hidden"
                >
                  Test item
                </p>
              </div>
            </span>
          </div>
        </div>
      </div>
    </li>
  </div>
</div>
`;
